r1.0-alpha3 (26.06.2017) - Release, dedicated to the Skydiver day

  * Single terminal mode optimisation
  * Different code size optimisations
  * STOP/CONT works and are condition compilable
  * Fix bug with TAB() expression under a false IF THEN branch

r1.0-alpha2 (12.06.2017) - Release, dedicated to the Russia day

  * Synchronized with tvoutex library
  * Fix the i2c eeprom operations
  * Fix output of the reals, less then 1.0 in absolute value
  * Fix generation of the arduino sketch
  * Fix build with Arduino IDE

r1.0-alpha1 (01.06.2017) - Release, dedicated to International day of protection of children

   * Darthmouth BASIC-style matrix operations
   * I2C eeprom module with functions ESAVE, ELOAD, ECHAIN
   * Corrections to fix Arduino DUE build
   * Interpreter FSM rewritten for fix bugs in multioperator lines processing

r0.8.2 (9.05.2017) - Release, dedicated to Victory Day.

   * Fix buffer overflow in real numbers output.
   * Real numbers output in the for of fixed or floating point.
     in order to use the shortest form.
   * Fix parsing of real numbers, now understands exponentioal form.
   * Optimisations and more configuration options  allow reducing
     code size.

r0.8.1 (28.04.2017) - Release, dedicated to my wedding anniversary
                      :).

   * Add deletion of the program lines by entering line number with
     empty string.
   * Add functions INT, SGN, CHR$.
   * Add string overflow errors (passes test 7 ANSI MINIMAL BASIC).
   * Add TAB argument exceptions (passes test 8 ANSI MINIMAL BASIC).
   * Optimisations, reducing FLASH/SRAM requirements. The smallest
     (and almost useless :) ) variant can be forced into Atmega 168...
   * Add string equality operator.
   * Add many condition compilation options.
   * Fix a couple of bugs.

r0.8.0 (12.04.2017) - Release, dedicated to International Day of
                      Human Space Flight.

   * Add support of modified TVout library to output to composite video