@@ -505,7 +505,7 @@ Parser::Value::printTo(Print& p) const
 			while (n < Real(1)) {
 				n *= Real(10);
 				--decWhole;
-				if (decWhole < -3)
+				if (decWhole <= -3)
 					break;
 			}
 		}
